--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,10 @@
   </head>
 
   <body>
-
-    some text
+    <%= render "layouts/header"%>
+    
     <%= yield %>
+
+    <%= render "layouts/footer" %>
   </body>
 </html>
